# rust-auth-boilerplate

./: .env.example  Cargo.toml  README.md  Rocket.toml
src/: main.rs  migrations.rs
src/auth/: guard.rs  jwt.rs
src/errors/: mod.rs
src/models/: mod.rs  password_reset.rs  user.rs
src/routes/: auth.rs
